add buy post and create order(G+T) in Post (address+slip+amount)
